--- a/lab_1/main.ipynb
+++ b/lab_1/main.ipynb
@@ -16,7 +16,7 @@
     "- **Q** - end the video;\n",
     "- **ESC** - quit the program **(double press)**.\n",
     "\n",
-    "**Note: you must use only English layout!**"
+    "**Note 1: you must use only English layout!**"
    ]
   },
   {
@@ -49,7 +49,7 @@
     "\n",
     "        elif k % 256 == 32:  # if user press SPACE\n",
     "            # Save img to file\n",
-    "            img_name = f\"images\\\\image_{img_counter}.png\"\n",
+    "            img_name = f\"image_{img_counter}.png\"\n",
     "            cv2.imwrite(img_name, frame)\n",
     "            img_counter += 1\n",
     "\n",
@@ -75,7 +75,7 @@
     "            # Define the codec and create VideoWriter object\n",
     "            fourcc = cv2.VideoWriter_fourcc(*'DIVX')\n",
     "            video_counter += 1\n",
-    "            out = cv2.VideoWriter(f'video\\\\video_{video_counter}.avi', fourcc, 20.0, resolution)\n",
+    "            out = cv2.VideoWriter(f'video_{video_counter}.avi', fourcc, 20.0, resolution)\n",
     "\n",
     "            print(\"Started to record new video\")\n",
     "\n",
@@ -123,6 +123,11 @@
       "Succssefully created new image!\n",
       "Succssefully created new image!\n",
       "Succssefully created new image!\n",
+      "Succssefully created new image!\n",
+      "Succssefully created new image!\n",
+      "Succssefully created new image!\n",
+      "Started to record new video\n",
+      "Successfully created new video!\n",
       "Started to record new video\n",
       "Successfully created new video!\n",
       "Started to record new video\n",
