--- a/lab_1/main.ipynb
+++ b/lab_1/main.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Welcome to my first lab in this course!\n",
     "\n",
-    "Call the function **main** (with resolution for video as a parameter) to run the program.\n",
+    "Call the function **main** (with path for saving images and videos and resolution for video as a parameters) to run the program.\n",
     "\n",
     "While the program is runnung you may use such buttons:\n",
     "- **SPACE** - create an image with line and rectangle with random shape and color;\n",
@@ -25,7 +25,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main(resolution):\n",
+    "def main(path, resolution):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    parameters:\n",
+    "    path - string (path for saving images and videos)\n",
+    "    resolution - tuple (resolution for video)\n",
+    "    \n",
+    "    return value:\n",
+    "    None\n",
+    "    \"\"\"\n",
     "\n",
     "    import cv2\n",
     "    import random as r\n",
@@ -49,10 +58,10 @@
     "\n",
     "        elif k % 256 == 32:  # if user press SPACE\n",
     "            # Save img to file\n",
-    "            img_name = f\"image_{img_counter}.png\"\n",
-    "            cv2.imwrite(img_name, frame)\n",
     "            img_counter += 1\n",
-    "\n",
+    "            img_name = path + f\"\\\\image_{img_counter}.png\"\n",
+    "            cv2.imwrite(img_name, frame)\n",
+    "            \n",
     "            # Read the saved img and open in a new window\n",
     "            img = cv2.imread(img_name, 0)\n",
     "\n",
@@ -75,7 +84,7 @@
     "            # Define the codec and create VideoWriter object\n",
     "            fourcc = cv2.VideoWriter_fourcc(*'DIVX')\n",
     "            video_counter += 1\n",
-    "            out = cv2.VideoWriter(f'video_{video_counter}.avi', fourcc, 20.0, resolution)\n",
+    "            out = cv2.VideoWriter(path + f'\\\\video_{video_counter}.avi', fourcc, 20.0, resolution)\n",
     "\n",
     "            print(\"Started to record new video\")\n",
     "\n",
@@ -119,21 +128,8 @@
       "Succssefully created new image!\n",
       "Succssefully created new image!\n",
       "Succssefully created new image!\n",
-      "Succssefully created new image!\n",
-      "Succssefully created new image!\n",
-      "Succssefully created new image!\n",
-      "Succssefully created new image!\n",
-      "Succssefully created new image!\n",
-      "Succssefully created new image!\n",
-      "Succssefully created new image!\n",
       "Started to record new video\n",
       "Successfully created new video!\n",
-      "Started to record new video\n",
-      "Successfully created new video!\n",
-      "Started to record new video\n",
-      "Successfully created new video!\n",
-      "Succssefully created new image!\n",
-      "Succssefully created new image!\n",
       "Succssefully created new image!\n",
       "Succssefully created new image!\n",
       "Succssefully created new image!\n",
@@ -142,7 +138,9 @@
     }
    ],
    "source": [
-    "main((640, 480))"
+    "path = \"Storage\"\n",
+    "resolution = (640, 480)\n",
+    "main(path, resolution)"
    ]
   },
   {
