--- a/lab_1/main.ipynb
+++ b/lab_1/main.ipynb
@@ -16,7 +16,7 @@
     "- **Q** - end the video;\n",
     "- **ESC** - quit the program **(double press)**.\n",
     "\n",
-    "**Note 1: you must use only English layout!**"
+    "**Note: you must use only English layout!**"
    ]
   },
   {
@@ -142,13 +142,6 @@
     "resolution = (640, 480)\n",
     "main(path, resolution)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
