add grey color on video

--- a/lab_1/main.ipynb
+++ b/lab_1/main.ipynb
@@ -12,8 +12,8 @@
     "\n",
     "While the program is runnung you may use such buttons:\n",
     "- **SPACE** - create an image with line and rectangle with random shape and color;\n",
-    "- **R** - start the video with random lines and rectangles;\n",
-    "- **Q** - end the video;\n",
+    "- **R** - start recording the video;\n",
+    "- **Q** - end recording the video and start showing recorded video with random lines and rectangle on every frame;\n",
     "- **ESC** - quit the program **(double press)**.\n",
     "\n",
     "**Note: you must use only English layout!**"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,36 +78,51 @@
     "            cv2.namedWindow(img_name, cv2.WINDOW_AUTOSIZE)\n",
     "            cv2.imshow(img_name, img)\n",
     "\n",
-    "            print(\"Succssefully created new image!\")\n",
+    "            print(\"Succssefully created new image!\\n\")\n",
     "\n",
     "        elif k & 0xFF == ord('r'):  # if user press R\n",
     "            # Define the codec and create VideoWriter object\n",
     "            fourcc = cv2.VideoWriter_fourcc(*'DIVX')\n",
     "            video_counter += 1\n",
-    "            out = cv2.VideoWriter(path + f'\\\\video_{video_counter}.avi', fourcc, 20.0, resolution)\n",
+    "            video_name = path + f'\\\\video_{video_counter}.avi'\n",
+    "            out = cv2.VideoWriter(video_name, fourcc, 20.0, resolution, isColor=False)\n",
     "\n",
-    "            print(\"Started to record new video\")\n",
+    "            print(\"Started to record new video...\")\n",
     "\n",
     "            while (cam.isOpened()):\n",
     "                ret, frame = cam.read()\n",
+    "                frame = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
     "                if not ret:\n",
     "                    print(\"Failed to grab frame\")\n",
     "                    break\n",
     "                else:\n",
-    "                    # Define random values for colors and size of line and rectangle\n",
-    "                    width, height = resolution\n",
-    "                    line_color, rect_color = tuple(r.randint(0, 255) for i in range(3)), tuple(r.randint(0, 255) for i in range(3))\n",
-    "                    line_sp, line_ep = (r.randint(0, width-1), r.randint(0, height-1)), (r.randint(0, width-1), r.randint(0, height-1))\n",
-    "                    rect_sp, rect_ep = (r.randint(0, width-1), r.randint(0, height-1)), (r.randint(0, width-1), r.randint(0, height-1))\n",
-    "\n",
-    "                    # Draw line and rectangle and update the video\n",
-    "                    frame = cv2.line(frame, line_sp, line_ep, line_color, 10)\n",
-    "                    frame = cv2.rectangle(frame, rect_sp, rect_ep, rect_color, 10)\n",
     "                    out.write(frame)\n",
     "                    cv2.imshow('main_frame', frame)\n",
     "\n",
     "                    if cv2.waitKey(1) & 0xFF == ord('q'):  # if user press Q\n",
-    "                        print(\"Successfully created new video!\")\n",
+    "                        print(\"Successfully recorded new video!\\n\")\n",
+    "                        print(\"Started to show processed video...\")\n",
+    "                        cap = cv2.VideoCapture(video_name)\n",
+    "                        \n",
+    "                        while (cap.isOpened()):\n",
+    "                            ret, frame = cap.read()\n",
+    "                            if ret:                                \n",
+    "                                # Define random values for colors and size of line and rectangle\n",
+    "                                width, height = resolution\n",
+    "                                line_color, rect_color = tuple(r.randint(0, 255) for i in range(3)), tuple(r.randint(0, 255) for i in range(3))\n",
+    "                                line_sp, line_ep = (r.randint(0, width-1), r.randint(0, height-1)), (r.randint(0, width-1), r.randint(0, height-1))\n",
+    "                                rect_sp, rect_ep = (r.randint(0, width-1), r.randint(0, height-1)), (r.randint(0, width-1), r.randint(0, height-1))\n",
+    "\n",
+    "                                # Draw line and rectangle and update the video\n",
+    "                                frame = cv2.line(frame, line_sp, line_ep, line_color, 10)\n",
+    "                                frame = cv2.rectangle(frame, rect_sp, rect_ep, rect_color, 10)\n",
+    "\n",
+    "                                cv2.imshow(video_name, frame)\n",
+    "                                cv2.waitKey(30)\n",
+    "\n",
+    "                            else:\n",
+    "                                print(\"Successfully showed processed video!\\n\")\n",
+    "                                break\n",
     "                        break\n",
     "\n",
     "    cam.release()\n",
@@ -117,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -125,14 +140,19 @@
      "output_type": "stream",
      "text": [
       "Succssefully created new image!\n",
+      "\n",
       "Succssefully created new image!\n",
+      "\n",
       "Succssefully created new image!\n",
+      "\n",
       "Succssefully created new image!\n",
-      "Started to record new video\n",
-      "Successfully created new video!\n",
-      "Succssefully created new image!\n",
-      "Succssefully created new image!\n",
-      "Succssefully created new image!\n",
+      "\n",
+      "Started to record new video...\n",
+      "Successfully recorded new video!\n",
+      "\n",
+      "Started to show processed video...\n",
+      "Successfully showed processed video!\n",
+      "\n",
       "Closing...\n"
      ]
     }
@@ -142,6 +162,13 @@
     "resolution = (640, 480)\n",
     "main(path, resolution)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
