--- a/lab_2/main.ipynb
+++ b/lab_2/main.ipynb
@@ -354,7 +354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"Storage\\\\features_for_main_photo.jpg\" alt=\"Drawing\" style=\"width: 400px;\"/>\n",
+    "<img src=\"Storage\\features_for_main_photo.jpg\" alt=\"Drawing\" style=\"width: 400px;\"/>\n",
     "\n",
     "Оскільки, це лише моя перша подібна програма, то я навіть не знаю, чи правильне еталонне зображення я обрав і чи програма знаходить необхідну кількість фіч для еталонного зображення. Проте будемо користуватися саме цим зображенням, бо, якщо чесно, то вже трішки ліньки, після всього цього написаного коду й продуманої логіки роботи програми, вибирати новий предмет і придумувати для нього своє еталонне зображення. Я відкритий до будь-якої критики й мені було б дуже цікаво послухати думку більш освіченої людини у цій сфері. "
    ]
