--- a/lab_4/program.ipynb
+++ b/lab_4/program.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,10 +36,9 @@
     "# original_vid - відео, що містить replaceable_img, яку ми будемо замінити\n",
     "# replacement_img - цією фотографією ми замінюємо replaceable_img\n",
     "\n",
-    "\n",
-    "replaceable_img = cv2.imread('replaceable_image.jpg')\n",
+    "replaceable_img = cv2.imread('replaceable_image_2.jpg')\n",
     "original_vid = cv2.VideoCapture('original_video.mp4')\n",
-    "replacement_img = cv2.imread('replacement_image.jpg')\n",
+    "replacement_img = cv2.imread('replacement_image_2.jpg')\n",
     "# replacement_vid = cv2.VideoCapture('replacement_video.mp4')\n",
     "\n",
     "success_original, original_vid_frame = original_vid.read()\n",
@@ -54,7 +53,7 @@
     "# detector  = cv2.ORB_create(nfeatures=3000)\n",
     "# matcher = cv2.BFMatcher()\n",
     "kp_original, des_original = detector.detectAndCompute(replaceable_img, None)\n",
-    "replaceable_img = cv2.drawKeypoints(replaceable_img,kp_original,None)"
+    "replaceable_img = cv2.drawKeypoints(replaceable_img, kp_original, None)"
    ]
   },
   {
@@ -1138,19 +1137,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
+    "from imutils.video import VideoStream\n",
+    "from imutils.video import FPS\n",
+    "\n",
     "webcam = cv2.VideoCapture(0)\n",
     "img_index = 0\n",
     "# replacement_img = cv2.resize(replacement_img,(640, 480))\n",
     "# replaceable_img = cv2.resize(replaceable_img,(640, 480))\n",
     "\n",
+    "# vs = VideoStream(src=0).start()\n",
+    "# time.sleep(2.0)\n",
+    "# fps = FPS().start()\n",
+    "\n",
     "while True:\n",
     "#     matcher = cv2.BFMatcher(cv2.NORM_L1)\n",
-    "    matcher = cv2.BFMatcher()\n",
-    "\n",
+    "#     matcher = cv2.BFMatcher()\n",
     "    success_webcam, webcam_frame = webcam.read()\n",
     "    webcam_frame_copy = webcam_frame.copy( )\n",
     "    kp_webcam, des_webcam = detector.detectAndCompute(webcam_frame, None)\n",
@@ -1211,9 +1217,34 @@
     "\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'): \n",
     "        break\n",
-    "        \n",
+    "\n",
+    "#     fps.update()\n",
+    "    \n",
+    "# fps.stop()\n",
+    "\n",
     "webcam.release() \n",
-    "cv2.destroyAllWindows()"
+    "cv2.destroyAllWindows()\n",
+    "# vs.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.748535514403062"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fps.fps()"
    ]
   },
   {
@@ -1225,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
